--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,3 +7,14 @@
 * {
     font-family: "DM Serif Display", serif;
 }
+
+html {
+    overflow: hidden;
+    width: 100%;
+}
+body {
+    height: 100%;
+    position: fixed;
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
+}
